クリックのアクションと表示の変更を追加

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,6 +20,7 @@
     {
       "matches": ["http://suumo.jp/*"],
       "js": ["jquery-2.2.1.min.js", "app.js"],
+      "css": ["resources/style.css"],
       "run_at": "document_end"
     }
   ]
