--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,16 +4,19 @@
   "description": "Filter properties you do not want to see.",
   "version": "0.0.1",
   "icons": {
-    "16": "resources/icon_256.png",
-    "48": "resources/icon_256.png",
-    "128": "resources/icon_256.png"
+    "16": "resources/don_16.png",
+    "48": "resources/don_48.png",
+    "128": "resources/don_128.png"
   },
   "permissions": [
     "storage",
     "http://suumo.jp/*"
   ],
   "browser_action": {
-    "default_icon": "resources/icon_256.png",
+    "default_icon": {
+      "19": "resources/don_19.png",
+      "38": "resources/don_38.png"
+    },
     "default_popup": "resources/popup.html"
   },
   "content_scripts": [
