--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "babel": "^6.3.26",
     "babel-core": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
-    "gulp": "^3.9.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.1",
     "gulp-json-editor": "^2.2.1",
     "gulp-util": "^3.0.7",
-    "gulp-zip": "^3.2.0"
+    "gulp-zip": "^3.2.0",
+    "run-sequence": "^1.1.5"
   },
   "description": "",
   "version": "0.0.1",
