--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^3.2.0",
+    "jquery": "^2.2.1",
+    "mustache": "^2.2.1",
     "run-sequence": "^1.1.5",
     "through2": "^2.0.1"
   },
