--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,7 +22,7 @@
   "content_scripts": [
     {
       "matches": ["http://suumo.jp/*"],
-      "js": ["jquery-2.2.1.min.js", "app.js"],
+      "js": ["app.js"],
       "css": ["resources/style.css"],
       "run_at": "document_end"
     }
