--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,14 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.6"
+  },
+  "overrides": {
+    "jquery": {
+      "main": ["dist/jquery.min.js"]
+    },
+    "bootstrap": {
+      "main": ["dist/js/bootstrap.min.js",
+               "dist/css/bootstrap.min.css" ]
+    }
   }
 }
