--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-json-editor": "^2.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.7",
+    "gulp-webserver": "^0.9.1",
     "gulp-zip": "^3.2.0",
     "jquery": "^2.2.1",
     "main-bower-files": "^2.11.1",
